# webapi_practice

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: context.hpp  router.hpp  server.hpp
include/controllers/: person_controller.hpp
include/models/: person.hpp
include/serializers/: person_serializer.hpp
include/services/: person_service.hpp
src/: context.cpp  main.cpp  router.cpp  server.cpp
src/controllers/: person_controller.cpp
src/models/: person.cpp
src/serializers/: person_serializer.cpp
src/services/: person_service.cpp
tests/: README.md  e2e.sh  e2e_test.py  requirements.txt
